--- a/index.css
+++ b/index.css
@@ -21,6 +21,7 @@
   --stat-heading: hsla(0, 0%, 100%, 0.6);
   --font-inter: "Inter", sans-serif;
   --font-lexend: "Lexend Deca", sans-serif;
+  --img-bg: rgba(170, 92, 219, 0.4);
 }
 
 body {
@@ -47,11 +48,20 @@ body {
 }
 
 .img-heading {
+  background-image: url("./images/image-header-mobile.jpg");
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  overflow: hidden;
 }
 
 .img {
   width: 100%;
-  object-fit: contain;
+  position: absolute;
+  inset: 0;
+  height: 100%;
+  background-color: var(--img-bg);
 }
 
 .container-heading {
