--- a/index.css
+++ b/index.css
@@ -33,7 +33,7 @@ body {
 }
 
 .container {
-  border-radius: 15px;
+  border-radius: 10px;
   background-color: var(--card-bg);
   display: grid;
   justify-items: center;
@@ -43,8 +43,9 @@ body {
   margin: 2.5rem 1.3rem;
   grid-template-columns: 100%;
   text-align: center;
-  grid-template-columns: 1fr;
-  grid-template-rows: repeat(4, 1fr);
+  /* grid-template-columns: 1fr; */
+  grid-template-rows: 30% 70%;
+  row-gap: 50px;
 }
 
 .img-heading {
@@ -64,9 +65,14 @@ body {
   background-color: var(--img-bg);
 }
 
+.card-container {
+  margin-top: 30px;
+}
+
 .container-heading {
   color: var(--main-heading);
   font-family: var(--font-inter);
+  margin-bottom: 20px;
 }
 
 .container-heading h1,
@@ -81,7 +87,7 @@ body {
 .container-subheading {
   font-family: var(--font-lexend);
   color: var(--main-paragraph);
-  margin-bottom: 100px;
+  margin-bottom: 50px;
   padding: 0 20px;
 }
 
@@ -91,7 +97,7 @@ body {
 }
 
 .container-footer {
-  margin-bottom: 90px;
+  margin-bottom: 150px;
 }
 
 .container-footer ul {
@@ -116,5 +122,50 @@ body {
 @media screen and (max-width: 375px) {
 }
 
-@media screen and (min-width: 1440px) {
+@media screen and (min-width: 1439px) {
+  body {
+    height: 100vh;
+  }
+  .container {
+    height: 54vh;
+    width: 83%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .img-heading {
+    order: 2;
+  }
+
+  .card-container {
+    padding: 2px 50px;
+    margin-top: 0;
+  }
+
+  .container-heading {
+    text-align: start;
+    padding-top: 200px;
+    padding-left: 25px;
+    margin-bottom: 0;
+  }
+
+  .container-heading h1,
+  .container-heading span {
+    font-size: 2.5rem;
+  }
+
+  .container-subheading {
+    padding: 10px 30px;
+    text-align: start;
+    margin-top: 20px;
+  }
+
+  .container-footer ul {
+    display: flex;
+    padding: 10px 20px;
+    justify-content: start;
+    align-items: center;
+    gap: 100px;
+  }
 }
