--- a/index.css
+++ b/index.css
@@ -2,14 +2,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap");
 
 *,
-::before,
-::after {
-  font-size: 15px;
+*::before,
+*::after {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  overflow-x: hidden;
-  overflow-y: hidden;
 }
 
 :root {
@@ -24,148 +21,6 @@
   --img-bg: rgba(170, 92, 219, 0.4);
 }
 
-body {
-  background-color: var(--main-bg);
-  color: #fff;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.container {
-  border-radius: 10px;
-  background-color: var(--card-bg);
-  display: grid;
-  justify-items: center;
-  align-items: center;
-  height: 90vh;
-  width: 90vw;
-  margin: 2.5rem 1.3rem;
-  grid-template-columns: 100%;
-  text-align: center;
-  /* grid-template-columns: 1fr; */
-  grid-template-rows: 30% 70%;
-  row-gap: 50px;
-}
-
-.img-heading {
-  background-image: url("./images/image-header-mobile.jpg");
-  background-size: cover;
-  width: 100%;
-  height: 100%;
-  position: relative;
-  overflow: hidden;
-}
-
-.img {
-  width: 100%;
-  position: absolute;
-  inset: 0;
-  height: 100%;
-  background-color: var(--img-bg);
-}
-
-.card-container {
-  margin-top: 30px;
-}
-
-.container-heading {
-  color: var(--main-heading);
-  font-family: var(--font-inter);
-  margin-bottom: 20px;
-}
-
-.container-heading h1,
-.container-heading span {
-  font-size: 2.2rem;
-}
-
-.container span {
-  color: var(--accent);
-}
-
-.container-subheading {
-  font-family: var(--font-lexend);
-  color: var(--main-paragraph);
-  margin-bottom: 50px;
-  padding: 0 20px;
-}
-
-.container-subheading p {
-  font-size: 1.1rem;
-  line-height: 2.2rem;
-}
-
-.container-footer {
-  margin-bottom: 150px;
-}
-
-.container-footer ul {
-  display: grid;
-  gap: 20px;
-}
-
-.footer-heading {
-  font-family: var(--font-inter);
-  font-size: 1.7rem;
-  /* color: var(--stat-heading); */
-}
-
-.footer-subheading {
-  font-family: var(--font-lexend);
-  font-size: 0.8rem;
-  color: var(--main-paragraph);
-  text-transform: uppercase;
-  margin-top: 0.5rem;
-}
-
-@media screen and (max-width: 375px) {
-}
-
-@media screen and (min-width: 1439px) {
-  body {
-    height: 100vh;
-  }
-  .container {
-    height: 54vh;
-    width: 83%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .img-heading {
-    order: 2;
-  }
-
-  .card-container {
-    padding: 2px 50px;
-    margin-top: 0;
-  }
-
-  .container-heading {
-    text-align: start;
-    padding-top: 200px;
-    padding-left: 25px;
-    margin-bottom: 0;
-  }
-
-  .container-heading h1,
-  .container-heading span {
-    font-size: 2.5rem;
-  }
-
-  .container-subheading {
-    padding: 10px 30px;
-    text-align: start;
-    margin-top: 20px;
-  }
-
-  .container-footer ul {
-    display: flex;
-    padding: 10px 20px;
-    justify-content: start;
-    align-items: center;
-    gap: 100px;
-  }
+html {
+  font-size: 62.5%;
 }
